# modus

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.tsx  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cg_test.rs  lib.rs  magnifier_test.rs  main.rs  perm_test.rs  xcap_test.rs
