[package]
name = "modus"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "modus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
core-graphics = "0.24"
objc = "0.2"
raw-window-handle = "0.6"
image = "0.25.10"
base64 = "0.22.1"
xcap = "0.9.6"
lazy_static = "1.5.0"
